--- a/env/.env_global
+++ b/env/.env_global
@@ -97,11 +97,7 @@ do-source "$DOTFILES"/nnn/conf.sh
 # LF config
 export OPENER="$DOTFILES/lf/open"
 do-source "$DOTFILES"/lf/lf_icons.sh
-# source lfcd
-LFCD="$DOTFILES/lf/lfcd.sh"
-if [ -f "$LFCD" ]; then
-    source "$LFCD"
-fi
+do-source "$DOTFILES/lf/lfcd.sh"
 
 # FFF config
 do-source "$DOTFILES"/fff/conf.sh
