--- a/i3/config
+++ b/i3/config
@@ -21,7 +21,7 @@ gaps outer 0
 
 # Colors
 set_from_resource $wal-fg i3wm.color7 #f0f0f0
-set_from_resource $wal-bg i3wm.color2 #f0f0f0
+set_from_resource $wal-bg i3wm.color19 #668cff
 
 set $bg-color 	         i3wm.color2
 set $inactive-bg-color   #002b36
@@ -450,7 +450,7 @@ bar {
         focused_workspace  #000000 #668cff #000000
         inactive_workspace #000000 #000000 #ffffff
         active_workspace   #000000 #000000 #ffffff
-        urgent_workspace   #00ff00 #006600 #ffffff
+        urgent_workspace   #f35888 #a31838 #ffffff
   }
   i3bar_command i3bar
   status_command i3blocks -c $HOME/.config/i3blocks/config
