--- a/i3blocks/config
+++ b/i3blocks/config
@@ -129,7 +129,7 @@ markup=pango
 
 [brightness]
 command=$LOCAL_DIR/brightness
-interval=1
+interval=repeat
 color=#ffffff
 border=#ccff00
 border_top=0
@@ -142,7 +142,7 @@ markup=pango
 
 [pavol]
 command=$LOCAL_DIR/volume &
-interval=1
+interval=repeat
 color=#ffffff
 border=#00aaaa
 border_top=0
