feat: add cpu blocks

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -105,7 +105,18 @@ markup=pango
 command=$LOCAL_DIR/cpu
 interval=5
 color=#ffffff
-border=#33aa7a
+border=#62ef3b
+border_right=0
+border_left=0
+border_top=0
+border_bottom=1
+markup=pango
+
+[cpulevels]
+command=$LOCAL_DIR/cpu-levels
+interval=repeat
+color=#ffffff
+border=#62ef3b
 border_right=0
 border_left=0
 border_top=0
