--- a/env/.env_global
+++ b/env/.env_global
@@ -140,6 +140,11 @@ if cmd-exists starship; then
     eval "$(starship init zsh)"
 fi
 
+# cheat.sh
+cht() {
+  curl cht.sh/$1
+}
+
 # ZSH bindings
 [ -f ~/.dotfiles/zsh/.zsh_bindings ] && source ~/.dotfiles/zsh/.zsh_bindings
 
