--- a/i3blocks/config
+++ b/i3blocks/config
@@ -114,7 +114,7 @@ markup=pango
 
 [cpulevels]
 command=$LOCAL_DIR/cpu-levels "#33aa7a"
-interval=repeat
+interval=1
 color=#ffffff
 border=#62ef3b
 border_right=0
@@ -153,7 +153,7 @@ markup=pango
 
 [brightness]
 command=$LOCAL_DIR/brightness  "#ccff00"
-interval=repeat
+interval=1
 color=#ffffff
 border=#ccff00
 border_top=0
