fix: remove termite from dotfiles (obsolete project)

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -26,7 +26,8 @@ export FL_BASE=$CU3/FL
 export FL_TR=$FL_BASE/Trunk
 export FL_22=$FL_BASE/R_22.0.x
 export FL_2203=$FL_BASE/R_22.0.3
-export FL_HOME=$FL_TR
+export FL_ODAS=$FL_BASE/FL-SmallODAS
+export FL_HOME=$FL_ODAS
 export CATGEN_HOME=$CU3/CatGen/Trunk
 export FLSE=$CU3/FLSE
 
