--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -87,7 +87,7 @@ font:
     #   - (macOS) Menlo
     #  - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono Nerd Font
+    family: JetBrainsMonoMedium Nerd Font
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
