--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,9 @@
-font_family             JetBrainsMono Nerd Font
+font_family             JetBrainsMonoMedium Nerd Font
 bold_font               auto
 italic_font             auto
 bold_italic_font        auto
 
-font_size               12.0
+font_size               11.0
 adjust_line_height      0
 adjust_column_width     0
 disable_ligatures       always
