--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -156,6 +156,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [
     "90:class_g = 'URxvt'",
     "85:class_g = 'kitty'",
+    "85:class_g = 'Alacritty'",
     "90:class_g = 'Rofi'",
     "90:class_g = 'st-256color'"
 ];
