feat: prevent alacritty to use DPR (scale depending on physical screen size)

--- a/env/.env_global
+++ b/env/.env_global
@@ -62,6 +62,9 @@ export RTS=$PROJ/rts-engine-private
 export WEB=$PROJ/langurmonkey.gitlab.io
 export PHD=$PROJ/phd_thesis
 
+# Winit scale factor for alacritty
+export WINIT_X11_SCALE_FACTOR=1
+
 # JVM
 export JAVA_HOME=/usr/lib/jvm/default
 export JDK_HOME=/usr/lib/jvm/default-runtime
