feat: add /home/tsagrista/Workspaces/IDEA-ws/DPAC/CU3/software//FL

--- a/env/.env_dpac
+++ b/env/.env_dpac
@@ -22,7 +22,8 @@ export SOFCOMMON="${SOFWORKSPACE}/DPAC/CU1/software/common"
 export ANT_HOME=/home/tsagrista/Workspaces/IDEA-ws/DPAC/CU1/software/common/apache-ant-1.10.5
 
 export CU3=$WS/DPAC/CU3/software/
-export FL_BASE=$CU3/FL
+export FL=$CU3/FL
+export FL_BASE=$FL
 export FL_TR=$FL_BASE/Trunk
 export FL_22=$FL_BASE/R_22.0.x
 export FL_2203=$FL_BASE/R_22.0.3
