--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -11,6 +11,8 @@ env:
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   TERM: xterm-256color
+  # Force DPR to 1.0
+  WINIT_X11_SCALE_FACTOR: "1.0"
 
 window:
   # Window dimensions (changes require restart)
