--- a/env/.env_global
+++ b/env/.env_global
@@ -142,6 +142,9 @@ do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting
 # Load zsh-autosuggestions
 do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
 
+# Load zsh-history-substring-search
+do-source /usr/share/zsh/plugins/zsh-history-substring-search/zsh-history-substring-search.zsh
+
 # Load colorize
 do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
 
