feat: separate zsh-specific init from the rest

--- a/env/.env_global
+++ b/env/.env_global
@@ -1,5 +1,4 @@
 #!/bin/bash
-
 #
 # USEFUL FUNCTIONS
 #
@@ -21,19 +20,10 @@ function cmd-exists {
 # Add GPD
 export GPD_TTY=$(tty)
 
-# Disable zsh matching
-setopt +o nomatch
-
 #
 # ENVIRONMENT VARIABLES
 #
 
-# zsh history
-HISTSIZE=10000
-SAVEHIST=10000
-HISTFILE=~/.zsh_history
-bindkey -v
-bindkey '^R' history-incremental-search-backward
 
 # GPG Key
 export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
@@ -126,33 +116,12 @@ export CALIBRE_USE_DARK_PALETTE=1
 # 
 do-source $DOTFILES/env/.aliases
 
-# Starship prompt
-if cmd-exists starship; then
-    eval "$(starship init zsh)"
+#
+# ZSH-specific shit
+#
+if [ ! -z "$ZSH_VERSION" ]; then
+    do-source $DOTFILES/env/.env_zsh
 fi
-
-# ZSH bindings
-[ -f ~/.dotfiles/zsh/.zsh_bindings ] && source ~/.dotfiles/zsh/.zsh_bindings
-
-# ZSH PLUGINS
-
-# Load zsh-syntax-highlighting
-do-source /usr/share/zsh/plugins/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
-
-# Load zsh-autosuggestions
-do-source /usr/share/zsh/plugins/zsh-autosuggestions/zsh-autosuggestions.zsh
-
-# Load zsh-history-substring-search
-do-source /usr/share/zsh/plugins/zsh-history-substring-search/zsh-history-substring-search.zsh
-
-# Load colorize
-do-source $DOTFILES/zsh/plugins/colorize/colorize.plugin.zsh
-
-# Load z
-do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
-
-# Load history substring search
-do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-search.plugin.zsh
 
 #
 # ENVIRONMENT INIT
