--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -42,6 +42,33 @@ do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 # Load history substring search
 do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-search.plugin.zsh
 
+# COMPLETION
 # Enable completion system
 autoload -U compinit; compinit
 
+# Completers
+zstyle ':completion:*' completer _extensions _complete _approximate
+# Group results
+zstyle ':completion:*' group-name ''
+# Caching the completion
+zstyle ':completion:*' use-cache on
+zstyle ':completion:*' cache-path "$XDG_CACHE_HOME/zsh/.zcompcache"
+# Use completion menu
+zstyle ':completion:*' menu select
+# Formatting descriptions, corrections, etc.
+zstyle ':completion:*:*:*:*:descriptions' format '%F{green}-- %d --%f'
+zstyle ':completion:*:*:*:*:corrections' format '%F{yellow}!- %d (errors: %e) -!%f'
+zstyle ':completion:*:messages' format ' %F{purple} -- %d --%f'
+zstyle ':completion:*:warnings' format ' %F{red}-- no matches found --%f'
+# Detailed list of files/dirs
+zstyle ':completion:*' file-list all
+# Colorful completion list
+zstyle ':completion:*:default' list-colors ${(s.:.)LS_COLORS}
+# Sort matching files alphabetically
+zstyle ':completion:*' file-sort dummyvalue
+# Key bindings
+zmodload zsh/complist
+bindkey -M menuselect 'h' vi-backward-char
+bindkey -M menuselect 'k' vi-up-line-or-history
+bindkey -M menuselect 'j' vi-down-line-or-history
+bindkey -M menuselect 'l' vi-forward-char
