feat: finish transition to new theme

--- a/env/.env_global
+++ b/env/.env_global
@@ -126,8 +126,7 @@ fi
 #
 # ENVIRONMENT INIT
 #
-# Apply wal theme, if any
-[ -f ~/.cache/wal/sequences ] &&  cat ~/.cache/wal/sequences
+[ -f ~/.cache/wal/sequences ] &&  (cat ~/.cache/wal/sequences &)
 [ -f ~/.cache/wal/colors-tty.sh ] && source ~/.cache/wal/colors-tty.sh
 
 # Uncomment to unlock ssh key by default (asks for password)
