--- a/i3/config
+++ b/i3/config
@@ -70,9 +70,6 @@ bindsym $mod+c exec $HOME/.dotfiles/bin/togglepicom
 # monitor off
 bindsym $mod+F8 exec $HOME/.dotfiles/bin/monitoroff
 
-# reload wal
-bindsym $mod+y exec wal -a 85 --theme $HOME/.dotfiles/pywal/themes/dark/base16-google.json
-
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
@@ -406,13 +403,13 @@ exec --no-startup-id playerctld
 #
 # UDISKIE - automount
 #
-exec --no-startup-id udiskie -f "$HOME/.dotfiles/bin/ranger-term" --tray
+exec --no-startup-id udiskie -f $HOME/.dotfiles/bin/ranger-term --tray
 
 # NO SCREENSAVER
 exec --no-startup-id $HOME/.dotfiles/bin/no-screenoff.sh
 
 # PYWAL
-exec --no-startup-id wal -a 85 --theme "$HOME/.dotfiles/pywal/themes/dark/base16-3024.json"
+exec --no-startup-id wal -a 85 --theme $HOME/.dotfiles/pywal/themes/dark/base16-google.json
 
 # 
 # COMPOSITOR - window compositor
