--- a/i3/config
+++ b/i3/config
@@ -368,7 +368,10 @@ client.background       $wal-bg
 exec_always --no-startup-id xset r rate 200 35 # initial delay 300 ms, repeat 35 ms
 
 # Keyboard layout definition. Switch escape and caps lock key
-exec --no-startup-id setxkbmap -model pc104 -layout us,es -option 'grp:alt_space_toggle,caps:swapescape,eurosign:e'
+exec_always --no-startup-id setxkbmap -model pc104 -layout us,es -option 'grp:alt_space_toggle,caps:swapescape,eurosign:e'
+
+# Activate numlock
+exec_always --no-startup-id numlockx
 
 #
 # TRACKPAD  - Dell XPS13 
