--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -171,7 +171,7 @@ opacity-rule = [
 blur:
 {
   # method = "gaussian";
-  method = "kawase";
+  method = "dual_kawase";
   size = 15;
   deviation = 10.0;
 };
