--- a/i3/config
+++ b/i3/config
@@ -62,7 +62,7 @@ bindsym $mod+Shift+s exec $HOME/.dotfiles/bin/ambientsound
 bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 
 # pulsemixer
-bindsym $mod+Shift+p exec "$myterm --class wm-floating,wm-floating --command pulsemixer"
+bindsym $mod+Shift+p exec "$myterm --class wm-floating-big,wm-floating-big --command pulsemixer"
 
 # toggle compositor
 bindsym $mod+c exec $HOME/.dotfiles/bin/togglepicom
@@ -128,7 +128,7 @@ bindsym $mod+n exec --no-startup-id $HOME/.dotfiles/bin/i3-new-workspace
 bindsym $mod+a focus parent
 
 # media player controls XF86Audio and $mod+Control
-bindsym $mod+Control+m exec "$myterm --class wm-floating,wm-floating --command ncmpcpp"
+bindsym $mod+Control+m exec "$myterm --class wm-floating-big,wm-floating-big --command ncmpcpp"
 bindsym XF86AudioPrev exec playerctl previous
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPlay exec playerctl play-pause
@@ -253,6 +253,7 @@ for_window [class=".*jprofiler.*"] floating enable
 for_window [class="FreeTube"] floating enable
 for_window [class="install4j-com-install4j-Install4JGUI"] floating enable
 for_window [class="wm-floating"] floating enable
+for_window [class="wm-floating-big"] floating enable resize set 1680 920
 for_window [title="Blender User Preferences"] floating enable
 for_window [title="Blender Preferences"] floating enable
 for_window [title="Volume Control"] floating enable
