feat: JetBrainsMonoMedium -> JetBrainsMono

--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,7 @@ set $mod2 Mod1
 set $myterm alacritty --config-file $($HOME/.dotfiles/bin/alacritty-config)
 
 # Font for window titles.
-font pango:JetBrainsMonoMedium Nerd Font 12
+font pango:JetBrainsMono Nerd Font 12
 
 # Gaps
 #for_window [class="^.*"] border pixel 0 
@@ -460,5 +460,5 @@ bar {
 
   position top
   tray_output primary
-  font pango:JetBrainsMonoMedium Nerd Font 10
+  font pango:JetBrainsMono Nerd Font 10
 }
