--- a/polybar/config
+++ b/polybar/config
@@ -59,7 +59,7 @@ padding-right = 1
 module-margin-left = 0
 module-margin-right = 1
 
-font-0 = "JetBrainsMonoMedium Nerd Font:size=10;0"
+font-0 = "JetBrainsMono Nerd Font:size=10;0"
 
 modules-left = i3 
 modules-center = xwindow-short
@@ -90,7 +90,7 @@ monitor = ${env:MONITOR:}
 height = 36
 line-size = 1
 
-font-0 = "JetBrainsMonoMedium Nerd Font:size=16;0"
+font-0 = "JetBrainsMono Nerd Font:size=16;0"
 
 modules-center = xwindow
 
