fix: black bg for music block

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -56,8 +56,8 @@ c5=#05658E
 command=$LOCAL_DIR/music  "$ffffff"
 interval=2
 color=#ffffff
-background=#F08238
-border=#F08238
+background=#000000
+border=#000000
 border_top=0
 border_right=0
 border_left=4
