fix: i3bloks colors

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -127,8 +127,8 @@ markup=pango
 command=$LOCAL_DIR/brightness  "#ffffff"
 interval=1
 color=#ffffff
-background=#E9CC32
-border=#E9CC32
+background=#998C12
+border=#998C12
 border_top=0
 border_right=4
 border_left=4
@@ -155,8 +155,8 @@ markup=pango
 command=$LOCAL_DIR/battery
 color=#ffffff
 interval=15
-background=#DF4A3D
-border=#DF4A3D
+background=#555555
+border=#555555
 border_top=0
 border_right=2
 border_left=2
