fix: i3blocks colors

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -39,12 +39,6 @@ full_text=
 separator=false
 # separator_block_width=15
 separator_block_width=0
-# color palette
-c1=#DF4A3D
-c2=#F08238
-c3=#E9CC32
-c4=#33B777
-c5=#05658E
 
 # [window title]
 # command=xdotool getactivewindow getwindowname
@@ -70,8 +64,8 @@ markup=pango
 command=$LOCAL_DIR/cpu-levels "#33aa7a"
 interval=1
 color=#ffffff
-backgound=#33aa7a
-border=#33aa7a
+background=#000000
+border=#23A767
 border_right=0
 border_left=0
 border_top=0
@@ -84,8 +78,8 @@ markup=pango
 command=$LOCAL_DIR/memory  "#ffffff"
 interval=5
 color=#ffffff
-background=#33B777
-border=#33B777
+background=#23A767
+border=#23A767
 border_right=4
 border_left=4
 border_top=0
@@ -141,8 +135,8 @@ markup=pango
 command=$LOCAL_DIR/volume 墳 婢 "#ffffff" &
 interval=1
 color=#ffffff
-background=#F08238
-border=#F08238
+background=#FF7228
+border=#FF7228
 border_top=0
 border_right=4
 border_left=4
