fix: tune colors

--- a/i3blocks/config
+++ b/i3blocks/config
@@ -78,8 +78,8 @@ markup=pango
 command=$LOCAL_DIR/memory  "#ffffff"
 interval=5
 color=#ffffff
-background=#23A767
-border=#23A767
+background=#0E8C4F
+border=#0E8C4F
 border_right=4
 border_left=4
 border_top=0
@@ -121,8 +121,8 @@ markup=pango
 command=$LOCAL_DIR/brightness  "#ffffff"
 interval=1
 color=#ffffff
-background=#998C12
-border=#998C12
+background=#F4B400
+border=#F4B400
 border_top=0
 border_right=4
 border_left=4
