--- a/ncmpcpp/config
+++ b/ncmpcpp/config
@@ -8,10 +8,9 @@ mpd_music_dir = ~/Music"
 mpd_crossfade_time = 2
 
 ## Visualizer
-visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_data_source = "/tmp/mpd.fifo"
 visualizer_output_name = "mpd_fifo"
 visualizer_in_stereo = "yes"
-visualizer_sync_interval = 30
 visualizer_type = "spectrum"
 visualizer_look = "+|"
 #visualizer_look = "◆▋"
