--- a/env/.env_global
+++ b/env/.env_global
@@ -128,5 +128,10 @@ fi
 [ -f ~/.cache/wal/sequences ] &&  (cat ~/.cache/wal/sequences &)
 [ -f ~/.cache/wal/colors-tty.sh ] && source ~/.cache/wal/colors-tty.sh
 
+# Set SSH to use gpg-agent
+unset SSH_AGENT_PID
+if [ "${gnupg_SSH_AUTH_SOCK_by:-0}" -ne $$ ]; then
+export SSH_AUTH_SOCK="~/.gnupg/S.gpg-agent.ssh"
+fi
 # Uncomment to unlock ssh key by default (asks for password)
-eval $(keychain --eval $HOME/.ssh/id_rsa)
+eval $(keychain --eval $HOME/.ssh/id_rsa $HOME/.ssh/id_ed25519)
