feat: add fortune | cowsay to env_fun

--- a/env/.env_fun
+++ b/env/.env_fun
@@ -2,5 +2,13 @@
 
 rpg () {
    rpg-cli "$@"
-   cd "$(rpg-cli --pwd)"
+   cd "$(rpg-cli pwd)"
 }
+
+command_exists () {
+    type "$1" &> /dev/null ;
+}
+# Let's hear the cow say...
+if command_exists fortune && command_exists cowsay; then
+    fortune | cowsay
+fi
