--- a/env/.env_fun
+++ b/env/.env_fun
@@ -9,6 +9,12 @@ command_exists () {
     type "$1" &> /dev/null ;
 }
 # Let's hear the cow say...
-if command_exists fortune && command_exists cowsay; then
+if command_exists fortune && command_exists cowsay && command_exists lolcat; then
+    fortune | cowsay | lolcat
+elif ! command_exists lolcat; then
     fortune | cowsay
+elif ! command_exists cowsay && command_exists lolcat; then
+    fortune | lolcat
+elif command_exists fortune; then
+    fortune
 fi
