feat: keychain with --quiet, fix fun

--- a/env/.env_fun
+++ b/env/.env_fun
@@ -11,9 +11,9 @@ command_exists () {
 # Let's hear the cow say...
 if command_exists fortune && command_exists cowsay && command_exists lolcat; then
     fortune | cowsay | lolcat
-elif ! command_exists lolcat; then
+elif command_exists fortune && command_exists cowsay && ! command_exists lolcat; then
     fortune | cowsay
-elif ! command_exists cowsay && command_exists lolcat; then
+elif command_exists fortune && ! command_exists cowsay && command_exists lolcat; then
     fortune | lolcat
 elif command_exists fortune; then
     fortune
