--- a/env/.env_global
+++ b/env/.env_global
@@ -134,4 +134,4 @@ if [ "${gnupg_SSH_AUTH_SOCK_by:-0}" -ne $$ ]; then
 export SSH_AUTH_SOCK="~/.gnupg/S.gpg-agent.ssh"
 fi
 # Uncomment to unlock ssh key by default (asks for password)
-eval $(keychain --eval $HOME/.ssh/id_rsa $HOME/.ssh/id_ed25519)
+eval $(keychain --quiet --eval $HOME/.ssh/id_rsa $HOME/.ssh/id_ed25519)
