feat: lf zsh autocompl

--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -42,6 +42,9 @@ do-source $DOTFILES/zsh/plugins/z/z.plugin.zsh
 # Load history substring search
 do-source $DOTFILES/zsh/plugins/history-substring-search/history-substring-search.plugin.zsh
 
+# LF completion
+fpath=(~/.dotfiles/zsh/plugins/lf $fpath)
+
 # COMPLETION
 # Enable completion system
 autoload -U compinit; compinit
