--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -47,4 +47,5 @@ osc=no
 ##################
 #
 # ytdl format
+script-opts=ytdl_hook-ytdl_path=/home/tsagrista/.local/bin/yt-dlp
 ytdl-format=bestvideo[height<=?720][fps<=?30][ext=mp4]+bestaudio[ext=m4a]
