--- a/env/.env_zsh
+++ b/env/.env_zsh
@@ -4,11 +4,6 @@
 # ZSH-specific shit
 #
 
-# Starship prompt
-if cmd-exists starship; then
-    eval "$(starship init zsh)"
-fi
-
 # zsh history
 HISTSIZE=10000
 SAVEHIST=10000
@@ -75,3 +70,8 @@ bindkey -M menuselect 'h' vi-backward-char
 bindkey -M menuselect 'k' vi-up-line-or-history
 bindkey -M menuselect 'j' vi-down-line-or-history
 bindkey -M menuselect 'l' vi-forward-char
+
+# Init Starship prompt
+if cmd-exists starship; then
+    eval "$(starship init zsh)"
+fi
