fix: sway config

--- a/env/.env_global
+++ b/env/.env_global
@@ -95,7 +95,7 @@ export LESS_TERMCAP_ue=$'\E[0m'        # reset underline
 
 # Other utils
 export RANGER_RELOAD_RC=FALSE
-export TERMINAL=kitty
+export TERMINAL=alacritty
 export BROWSER=qutebrowser
 GPG_TTY=$(tty)
 export GPG_TTY
