--- a/sway/config
+++ b/sway/config
@@ -70,7 +70,9 @@ bindsym XF86Search exec $HOME/.dotfiles/bin/fmenu -i $HOME -t +10
 bindsym $mod+Shift+p exec "$myterm --class wm-floating-big,wm-floating-big --command pulsemixer"
 
 # monitor off
-bindsym $mod+F8 exec $HOME/.dotfiles/bin/monitoroff
+bindsym $mod+F8 exec swayidle -w \
+    timeout 1 'swaymsg "output *  dpms off"' \
+    resume 'swaymsg "output * dpms on"; pkill -nx swayidle'
 
 # change focus
 bindsym $mod+h focus left
@@ -221,11 +223,10 @@ assign [class="Steam"] $ws5
 assign [class="FreeTube"] $ws6
 
 # default floating
-for_window [class="gimp"] floating enable
+for_window [class="Gimp-2.10"] floating enable
 for_window [class="pdfpc"] floating enable
-for_window [class="Lxappearance"] floating enable sticky enable
-for_window [class="qt5ct"] floating enable sticky enable
-for_window [class="Qtconfig-qt4"] floating enable sticky enable
+for_window [class="Lxappearance"] floating enable
+for_window [class="qt5ct"] floating enable
 for_window [class="Blueman-manager"] floating enable
 for_window [class="GParted"] floating enable
 for_window [class="Skype"] floating enable
@@ -351,8 +352,8 @@ bindsym $mod+shift+z exec --no-startup-id swaylock -c 000000
 # STARTUP APPLICATIONS
 #
 
-exec swayidle -w \
-	timeout 180 'swaylock' \
+exec_always --no-startup-id swayidle -w \
+	timeout 180 'swaylock -c 000000' \
 	timeout 185 'swaymsg "output * dpms off"' \
 	resume 'swaymsg "output * dpms on"'
 
