--- a/i3/config
+++ b/i3/config
@@ -358,8 +358,8 @@ mode "resize" {
 # Window colors
 # type                  border              background         text                 indicator
 client.focused          $wal-bg            $wal-bg             $text-color          $wal-bg
-client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color $inacive-bg-color
-client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color $inacive-bg-color
+client.unfocused        $inactive-bg-color $inactive-bg-color  $inactive-text-color $inactive-bg-color
+client.focused_inactive $inactive-bg-color $inactive-bg-color  $inactive-text-color $inactive-bg-color
 client.urgent           $urgent-bg-color   $urgent-bg-color    $text-color          $urgent-bg-color
 
 client.background       $wal-bg
