--- a/sway/config
+++ b/sway/config
@@ -268,7 +268,11 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-# Start Applications
+# screenshots
+# grimshot
+bindsym Print exec grimshot save screen && notify-send "Screenshot saved to /home/tsagrista/Pictures/$(\ls -Art /home/tsagrista/Pictures | tail -n 1)"
+
+# start applications
 bindsym $mod+Shift+w exec qutebrowser
 bindsym $mod+Control+w exec firefox
 bindsym $mod+Shift+t exec thunderbird
